--- a/app/views/win2.xml
+++ b/app/views/win2.xml
@@ -3,18 +3,25 @@
 		<View id="profileContainer">
 				<View id="profileHorizontal">
 					<View id="profileImage">
-						<Label>Profile Image</Label>
+						<Label class="LblTxt">Profile Image</Label>
+						<Button id="upload" onClick="uploadPhoto">Upload image</Button>
+						<Button id="upload" onClick="searchPhoto">Search Photo</Button>
+						
+						<ImageView id="profilePicture"/>
 					</View>
 					<View id="profileBasic">
-						<Label>Profile Basic Info</Label>
+						<Label class="LblTxt" id="username"></Label>
+						<Label class="LblTxt" id="firstname"></Label>
+						<Label class="LblTxt" id="lastname"></Label>
+						<Label class="LblTxt" id="email"></Label>
 					</View>
 				</View>
 				<View id="profileVertical">
 					<View id="profileSpecific">
-						<Label>Profile Specific Info</Label>
+						<Label class="LblTxt">Profile Specific Info</Label>
 					</View>
 					<View id="profileClasses">
-						<Label>Classes</Label>
+						<Label class="LblTxt">Classes</Label>
 					</View>
 				</View>
 		</View>
